--- a/app/globals.css
+++ b/app/globals.css
@@ -121,8 +121,10 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
 }
 
+@import './(dashboard)/calendar/calendar.css';
